--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
     <!-- 🔹 Social Media & Payment Icons -->
     <div class="social-payment-container">
         <div class="social-icons">
-            <a href="https://www.tiktok.com/" target="_blank"><img src="icons/tiktok.png" alt="TikTok"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="icons/instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="icons/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="icons/twitter.png" alt="Twitter"></a>
+            <a href="https://www.tiktok.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/TikTok_logo.png" alt="TikTok">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitter_Logo.png" alt="Twitter">
+            </a>
         </div>
         <div class="payment-icons">
             <img src="icons/paypal.png" alt="PayPal">
