--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <img src="IMG_3271.jpeg" alt="Header Image" class="header-image">
     </div>
 
-    <!-- 🔹 Social Media & Payment Icons -->
-    <div class="social-payment-container">
+    <!-- 🔹 Social Media Icons Bar -->
+    <div class="social-bar">
         <div class="social-icons">
             <a href="https://www.tiktok.com" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/TikTok_logo.png" alt="TikTok">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/TikTok_Logo.png" alt="TikTok">
             </a>
             <a href="https://www.instagram.com" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
@@ -27,16 +27,14 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitter_Logo.png" alt="Twitter">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X">
             </a>
         </div>
-        <div class="payment-icons">
-            <img src="icons/paypal.png" alt="PayPal">
-            <img src="icons/visa.png" alt="Visa">
-            <img src="icons/usdt.png" alt="USDT">
-            <img src="icons/redotpay.png" alt="RedotPay">
-            <img src="icons/kast.png" alt="KAST">
-        </div>
+    </div>
+
+    <!-- 🔹 Payment Methods Image -->
+    <div class="payment-bar">
+        <img src="IMG_PAYMENT_METHODS.jpeg" alt="Payment Methods">
     </div>
 
     <!-- 🔹 Product Showcase -->
@@ -117,17 +115,19 @@
     </section>
 
     <!-- 🔹 WhatsApp Button -->
-    <a href="https://wa.me/966541827904?text=Hello, I need help with my order" 
+    <a href="https://wa.me/966541827904" 
        id="whatsapp-button" 
        target="_blank"
        class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
-        <img src="icons/whatsapp.png" alt="WhatsApp" class="w-10 h-10">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" class="w-10 h-10">
     </a>
 
     <!-- 🔹 Footer -->
     <footer class="footer">
         <p>© 2025 All rights reserved.</p>
-        <a href="#">Privacy Policy</a> | <a href="#">Return Policy</a> | <a href="#">About Us</a>
+        <a href="privacy-policy.html">Privacy Policy</a> | 
+        <a href="return-policy.html">Return Policy</a> | 
+        <a href="about-us.html">About Us</a>
     </footer>
 
     <script src="script.js"></script>
