--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <!-- 🔹 Header Image -->
     <div class="header-container">
-        <img src="IMG_3284.jpeg" alt="Header Image" class="header-image">
+        <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
     </div>
 
-    <!-- 🔹 Social Media Icons Bar --
+    <!-- 🔹 Social Media Icons Bar -->
     <div class="social-bar">
         <div class="social-icons">
             <a href="https://www.tiktok.com" target="_blank">
