--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="product-card">
-                    <img src="images/product1.jpeg" alt="Product 1">
+                    <img src="IMG_3105.jpeg" alt="Product 1">
                     <h3>✨ Premium Luxury Product</h3>
                     <p>Made from the finest materials for an unparalleled experience.</p>
                 </div>
