--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div class="header-container">
         <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
     </div>
+    
+    <!-- 🔹 Payment Methods Image -->
+    <div class="payment-bar">
+        <img src="IMG_3294.jpeg" alt="Payment Methods">
+    </div>
 
     <!-- 🔹 Social Media Icons Bar -->
     <div class="social-bar">
@@ -32,10 +37,7 @@
         </div>
     </div>
 
-    <!-- 🔹 Payment Methods Image -->
-    <div class="payment-bar">
-        <img src="IMG_PAYMENT_METHODS.jpeg" alt="Payment Methods">
-    </div>
+    
 
     <!-- 🔹 Product Showcase -->
     <section class="py-8 bg-gray-100 text-center">
