--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="social-bar">
         <div class="social-icons">
             <a href="https://www.tiktok.com" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/TikTok_Logo.png" alt="TikTok">
+                <img src="IMG_3298.png" alt="TikTok">
             </a>
             <a href="https://www.instagram.com" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
