--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X">
+                <img src="IMG_3299.jpeg" alt="X">
             </a>
         </div>
     </div>
