--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     
     <!-- 🔹 Payment Methods Image -->
     <div class="payment-bar">
-        <img src="IMG_3301.jpeg" alt="Payment Methods">
+        <img src="IMG_3303.jpeg
+" alt="Payment Methods">
     </div>
 
     <!-- 🔹 Social Media Icons Bar -->
