--- a/policies.html
+++ b/policies.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>سياسات الموقع</title>
+    <title>Website Policies</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-white text-gray-900">
 
-    <!-- 🔹 الهيدر -->
+    <!-- 🔹 Header -->
     <header class="bg-gray-200 py-4 text-center">
-        <h1 class="text-3xl font-bold text-gray-800">📜 السياسات والمعلومات</h1>
+        <h1 class="text-3xl font-bold text-gray-800">📜 Policies & Information</h1>
     </header>
 
-    <!-- 🔹 سياسة الخصوصية -->
+    <!-- 🔹 Privacy Policy -->
     <section id="privacy-policy-content" class="py-6 text-center">
-        <h2 class="text-2xl font-bold text-gray-900">📜 سياسة الخصوصية</h2>
-        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-right">
-            نحن نقدر خصوصية عملائنا ونلتزم بحماية بياناتهم الشخصية. عند استخدامك لموقعنا أو خدماتنا، فإنك توافق على جمع واستخدام معلوماتك وفقًا لهذه السياسة.  
-            نقوم بجمع المعلومات التي تقدمها لنا عند إجراء عملية شراء أو الاشتراك في خدماتنا، ونستخدم هذه المعلومات لمعالجة الطلبات، وتحسين تجربة المستخدم، وتقديم الدعم الفني.  
-            نحن لا نشارك معلوماتك الشخصية مع أي طرف ثالث إلا في الحالات الضرورية مثل معالجة الدفع أو الشحن. كما نستخدم تقنيات الحماية الحديثة لضمان أمان بياناتك.  
-            لديك الحق في طلب حذف بياناتك الشخصية من أنظمتنا في أي وقت عبر التواصل معنا.
+        <h2 class="text-2xl font-bold text-gray-900">📜 Privacy Policy</h2>
+        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-left">
+            We value our customers' privacy and are committed to protecting their personal data. By using our website or services, you agree to the collection and use of your information in accordance with this policy.  
+            We collect information you provide when making a purchase or subscribing to our services. This information is used to process orders, enhance user experience, and provide technical support.  
+            We do not share your personal information with third parties unless necessary, such as payment processing or shipping. We use advanced security technologies to protect your data.  
+            You have the right to request the deletion of your personal data from our systems at any time by contacting us.
         </div>
     </section>
 
-    <!-- 🔹 سياسة الاسترجاع -->
+    <!-- 🔹 Return Policy -->
     <section id="return-policy-content" class="py-6 bg-gray-100 text-center">
-        <h2 class="text-2xl font-bold text-gray-900">🔄 سياسة الاسترجاع</h2>
-        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-right">
-            نحن نضمن رضا عملائنا عن المنتجات التي نقدمها، ولذلك نوفر سياسة استرجاع لمدة <strong>10 أيام</strong> من تاريخ استلام المنتج، وفقًا للشروط التالية:  
-            <ul class="list-disc text-right pl-6 mt-2">
-                <li>يجب أن يكون المنتج في حالته الأصلية وغير مستخدم، مع جميع الملحقات والتغليف الأصلي.</li>
-                <li>يجب تقديم إثبات الشراء عند طلب الاسترجاع.</li>
-                <li>يتحمل العميل رسوم الشحن عند إرجاع المنتج، ما لم يكن العيب ناتجًا عن خطأ في المنتج أو عيب مصنعي.</li>
-                <li>المنتجات الرقمية غير قابلة للاسترجاع بعد إتمام عملية الشراء، إلا في حالة وجود مشكلة فنية مؤكدة.</li>
-                <li>يتم استرداد المبلغ بنفس طريقة الدفع الأصلية خلال <strong>7 أيام عمل</strong> من تاريخ الموافقة على الطلب.</li>
+        <h2 class="text-2xl font-bold text-gray-900">🔄 Return Policy</h2>
+        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-left">
+            We ensure customer satisfaction with our products, which is why we offer a **10-day return policy** from the date of receiving the product, under the following conditions:  
+            <ul class="list-disc text-left pl-6 mt-2">
+                <li>The product must be in its original condition, unused, and include all accessories and original packaging.</li>
+                <li>Proof of purchase must be provided when requesting a return.</li>
+                <li>The customer is responsible for return shipping costs unless the product has a defect or was incorrectly shipped.</li>
+                <li>Digital products are non-refundable after purchase unless a confirmed technical issue exists.</li>
+                <li>Refunds will be issued via the original payment method within **7 business days** after approval.</li>
             </ul>
             <br>
-            لطلب الاسترجاع، يرجى التواصل معنا عبر <a href="mailto:support@example.com" class="text-blue-600 hover:underline">البريد الإلكتروني</a>.
+            To request a return, please contact us at <a href="mailto:Voclen08@gmail.com" class="text-blue-600 hover:underline">our email</a>.
         </div>
     </section>
 
-    <!-- 🔹 من نحن -->
+    <!-- 🔹 About Us -->
     <section id="about-us-content" class="py-6 text-center">
-        <h2 class="text-2xl font-bold text-gray-900">👤 من نحن</h2>
-        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-right">
-            أنا <strong>مسوق إلكتروني</strong> متخصص في الترويج للمنتجات عبر منصات التجارة الإلكترونية مثل <strong>علي إكسبرس</strong> و <strong>أمازون</strong>، حيث أساعد العملاء في الحصول على أفضل العروض والخصومات.  
-            بالإضافة إلى ذلك، أقوم بتطوير وإطلاق <strong>منتجات رقمية</strong> خاصة بي، والتي توفر حلولًا مبتكرة ومفيدة للمستخدمين في مختلف المجالات.  
-            أسعى دائمًا إلى تقديم أفضل الخدمات والمنتجات لعملائي، مع التركيز على الجودة والمصداقية.  
-            إذا كان لديك أي استفسارات أو ترغب في معرفة المزيد عن العروض والمنتجات التي أقدمها، لا تتردد في <a href="mailto:support@example.com" class="text-blue-600 hover:underline">التواصل معي</a>.
+        <h2 class="text-2xl font-bold text-gray-900">👤 About Us</h2>
+        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-left">
+            I am a **digital marketer** specializing in promoting products through e-commerce platforms such as **AliExpress** and **Amazon**, helping customers find the best deals and discounts.  
+            Additionally, I develop and launch my own **digital products**, offering innovative and useful solutions in various fields.  
+            I am committed to providing high-quality services and products to my customers with a focus on trust and reliability.  
+            If you have any inquiries or want to learn more about the offers and products I provide, feel free to <a href="mailto:Voclen08@gmail.com" class="text-blue-600 hover:underline">contact me</a>.
         </div>
     </section>
 
-    <!-- 🔹 زر العودة -->
+    <!-- 🔹 Back Button -->
     <div class="text-center py-6">
         <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded">
-            🔙 العودة إلى الصفحة الرئيسية
+            🔙 Back to Home Page
         </a>
     </div>
 
-    <!-- 🔹 الفوتر -->
+    <!-- 🔹 Footer -->
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
         <div class="container mx-auto">
-            <p class="mt-2">جميع الحقوق محفوظة 2025</p>
+            <p class="mt-2">© 2025 All rights reserved.</p>
         </div>
     </footer>
 
