--- a/index.html
+++ b/index.html
@@ -126,11 +126,14 @@
     </a>
 
     <!-- 🔹 Footer -->
-    <footer class="footer">
-        <p>© 2025 All rights reserved.</p>
-        <a href="privacy-policy.html">Privacy Policy</a> | 
-        <a href="return-policy.html">Return Policy</a> | 
-        <a href="about-us.html">About Us</a>
+    <!-- 🔹 Footer -->
+    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
+        <div class="container mx-auto">
+            <p class="mt-2">© 2025 All rights reserved.</p>
+            <a href="policies.html" class="text-blue-600 hover:underline">Privacy Policy</a> | 
+            <a href="policies.html#return-policy-content" class="text-blue-600 hover:underline">Return Policy</a> | 
+            <a href="policies.html#about-us-content" class="text-blue-600 hover:underline">About Us</a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
