--- a/index.html
+++ b/index.html
@@ -85,16 +85,14 @@
                 <button type="submit" class="btn-glow mt-4">🚀 Order Now - Cash on Delivery</button>
             </form>
 
-            <!-- 🔹 قسم الدفع عبر PayPal وبطاقة الائتمان -->
-            <h2 class="text-2xl font-bold text-gray-900 mt-6">أو قم بالدفع مباشرة عبر PayPal أو البطاقة</h2>
-            
-            <!-- قسم إدخال بيانات البطاقة -->
+            <!-- 🔹 الدفع بالبطاقة (ظاهرة تلقائيًا) -->
+            <h2 class="text-2xl font-bold text-gray-900 mt-6">💳 الدفع باستخدام البطاقة</h2>
             <div id="card-container" class="mt-4"></div>
-            <button id="card-button" disabled class="btn-glow mt-2">💳 إتمام الدفع بالبطاقة</button>
 
             <hr class="my-4">
 
-            <!-- زر الدفع عبر PayPal -->
+            <!-- 🔹 الدفع عبر PayPal -->
+            <h2 class="text-2xl font-bold text-gray-900 mt-6">🌍 الدفع عبر PayPal</h2>
             <div id="paypal-button-container"></div>
         </div>
     </section>
