--- a/index.html
+++ b/index.html
@@ -41,99 +41,113 @@
         </div>
     </div>
 
-    <!-- 🔹 Payment Section -->
-    <section class="flex justify-center">
-        <div class="bg-white shadow-md rounded-lg p-6 w-96">
-            <h2 class="text-xl font-bold text-gray-700 text-center mb-4">Credit Card Information</h2>
+    <!-- 🔹 Product Showcase -->
+    <section class="py-8 bg-gray-100 text-center">
+        <div class="container mx-auto max-w-5xl">
+            <h2 class="text-3xl font-bold text-gray-900 mb-6">💎 Our Featured Products</h2>
 
-            <!-- 🔹 إدخال بيانات البطاقة (مفتوح دائمًا) -->
-            <div id="card-form">
-                <label for="card-number" class="block text-gray-700 text-sm font-bold mb-2">Card Number</label>
-                <div id="card-number" class="border p-3 rounded-md shadow-sm"></div>
-
-                <label for="expiration-date" class="block text-gray-700 text-sm font-bold mt-2">Expiration Date</label>
-                <div id="expiration-date" class="border p-3 rounded-md shadow-sm"></div>
-
-                <label for="cvv" class="block text-gray-700 text-sm font-bold mt-2">CVV</label>
-                <div id="cvv" class="border p-3 rounded-md shadow-sm"></div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="product-card">
+                    <img src="IMG_3105.jpeg" alt="Product 1">
+                    <h3>✨ Premium Luxury Product</h3>
+                    <p>Made from the finest materials for an unparalleled experience.</p>
+                </div>
+                <div class="product-card">
+                    <img src="IMG_3098.jpeg" alt="Product 2">
+                    <h3>🌿 Skincare Natural Formula</h3>
+                    <p>Gives your skin a smooth and fresh feeling, suitable for all skin types.</p>
+                </div>
+                <div class="product-card">
+                    <img src="IMG_3100.jpeg" alt="Product 3">
+                    <h3>☕ Premium Roasted Coffee</h3>
+                    <p>Enjoy the original taste of carefully roasted coffee beans.</p>
+                </div>
             </div>
-
-            <!-- 🔹 زر الدفع بالبطاقة -->
-            <button id="card-button" class="w-full bg-green-500 text-white py-2 mt-4 rounded-md text-lg font-semibold hover:bg-green-600">
-                Pay Now
-            </button>
-
-            <hr class="my-4">
-
-            <!-- 🔹 زر الدفع عبر PayPal -->
-            <div id="paypal-button-container"></div>
         </div>
     </section>
 
-    <!-- 🔹 WhatsApp Button -->
-    <a href="https://wa.me/966541827904" id="whatsapp-button" target="_blank"
-       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" class="w-10 h-10">
-    </a>
+    <!-- 🔹 Payment Section -->
+    <section class="flex justify-center">
+        <div class="bg-white shadow-md rounded-lg p-6 w-96">
+            <h2 class="text-xl font-bold text-gray-700 text-center mb-4">Secure Payment</h2>
 
-    <!-- 🔹 Footer -->
-    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
-        <div class="container mx-auto">
-            <p class="mt-2">© 2025 All rights reserved.</p>
-            <a href="privacy-policy.html" class="text-blue-600 hover:underline">Privacy Policy</a> | 
-            <a href="return-policy.html" class="text-blue-600 hover:underline">Return Policy</a> | 
-            <a href="about-us.html" class="text-blue-600 hover:underline">About Us</a>
+            <!-- 🔹 اختيار الكمية -->
+            <label for="quantity" class="block text-gray-700 font-semibold mb-2">Choose Quantity:</label>
+            <select id="quantity" class="border p-2 rounded w-full">
+                <option value="1" selected>1 Piece</option>
+                <option value="2">2 Pieces (Discount!)</option>
+                <option value="3">3 Pieces (More Discount!)</option>
+            </select>
+
+            <!-- 🔹 عرض السعر -->
+            <p id="total-price" class="text-lg font-semibold text-gray-700 mt-2">Price: $10.00</p>
+
+            <!-- 🔹 زر الدفع عبر PayPal -->
+            <div id="paypal-button-container" class="mt-4"></div>
         </div>
-    </footer>
+    </section>
 
-    <!-- 🔹 تحميل PayPal SDK مع تمكين Hosted Fields -->
-    <script src="https://www.paypal.com/sdk/js?client-id=AZsqOV7PNElXMoKK4b-Z0CVgd9ymky6qwNMynhX3a2PyJj7i97tH2g8HXlmGsuCwo3QcChAQxYrtcuds&components=buttons,hosted-fields"></script>
+    <!-- 🔹 تحميل PayPal SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AZsqOV7PNElXMoKK4b-Z0CVgd9ymky6qwNMynhX3a2PyJj7i97tH2g8HXlmGsuCwo3QcChAQxYrtcuds&components=buttons"></script>
 
-    <!-- 🔹 تحميل سكربت الدفع -->
+    <!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal وإرسال إشعار تيليجرام -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            // 🔹 تهيئة إدخال البطاقة ليكون مفتوح دائمًا
-            paypal.HostedFields.render({
-                createOrder: function () {
-                    return fetch('/my-server/create-paypal-order', { method: 'post' })
-                        .then(response => response.json())
-                        .then(order => order.id);
-                },
-                styles: {
-                    input: {
-                        'font-size': '16px',
-                        'color': '#333'
-                    }
-                },
-                fields: {
-                    number: { selector: "#card-number", placeholder: "•••• •••• •••• ••••" },
-                    expirationDate: { selector: "#expiration-date", placeholder: "MM/YY" },
-                    cvv: { selector: "#cvv", placeholder: "123" }
-                }
-            }).then(function (hostedFields) {
-                document.getElementById("card-button").addEventListener("click", function () {
-                    hostedFields.submit().then(function () {
-                        alert("✅ Payment successful!");
-                    }).catch(function (error) {
-                        alert("❌ Payment failed!");
-                        console.error(error);
-                    });
-                });
+            const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN";
+            const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID";
+            const basePrice = 10.00;
+            const quantitySelect = document.getElementById("quantity");
+            const totalPriceElement = document.getElementById("total-price");
+
+            function updatePrice() {
+                const quantity = parseInt(quantitySelect.value);
+                const totalPrice = basePrice * quantity;
+                totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
+                return totalPrice.toFixed(2);
+            }
+
+            quantitySelect.addEventListener("change", function () {
+                updatePrice();
+                renderPayPalButton();
             });
 
-            // 🔹 تشغيل زر PayPal عند الضغط عليه
-            paypal.Buttons({
-                createOrder: function (data, actions) {
-                    return actions.order.create({
-                        purchase_units: [{ amount: { value: '10.00' } }]
-                    });
-                },
-                onApprove: function (data, actions) {
-                    return actions.order.capture().then(function (details) {
-                        alert("✅ Payment successful via PayPal!");
-                    });
-                }
-            }).render("#paypal-button-container");
+            function renderPayPalButton() {
+                document.getElementById("paypal-button-container").innerHTML = "";
+                paypal.Buttons({
+                    createOrder: function (data, actions) {
+                        return actions.order.create({
+                            purchase_units: [{
+                                amount: { value: updatePrice() }
+                            }]
+                        });
+                    },
+                    onApprove: function (data, actions) {
+                        return actions.order.capture().then(function (details) {
+                            alert("✅ Payment successful via PayPal!");
+
+                            // 🔹 تجهيز بيانات العميل وإرسالها إلى تيليجرام
+                            let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                          `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                          `📧 *Email:* ${details.payer.email_address}\n` +
+                                          `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                          `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                            fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+                                method: "POST",
+                                headers: { "Content-Type": "application/json" },
+                                body: JSON.stringify({
+                                    chat_id: TELEGRAM_CHAT_ID,
+                                    text: message,
+                                    parse_mode: "Markdown"
+                                })
+                            }).catch(error => console.error("Telegram API error:", error));
+                        });
+                    }
+                }).render("#paypal-button-container");
+            }
+
+            updatePrice();
+            renderPayPalButton();
         });
     </script>
 
