--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="bg-white shadow-md py-4">
         <div class="container mx-auto flex justify-between items-center px-6">
             <h1 class="text-2xl font-bold text-gray-700">Your Brand</h1>
-            <img src="logo.png" alt="Brand Logo" class="h-10">
+            <img src="IMG_3286.jpeg" alt="Brand Logo" class="h-10">
         </div>
     </header>
 
