--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body class="bg-gray-100">
 
     <!-- 🔹 Header -->
-    
-    <!-- 🔹 Header Image -->
     <div class="header-container">
         <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
     </div>
@@ -20,8 +18,6 @@
     <div class="payment-bar">
         <img src="IMG_3303.jpeg" alt="Payment Methods">
     </div>
-
-    
 
     <!-- 🔹 Social Media Icons -->
     <div class="text-center mb-6">
@@ -88,6 +84,22 @@
         </div>
     </section>
 
+    <!-- 🔹 Telegram Button -->
+    <a href="https://t.me/YOUR_TELEGRAM_USERNAME" id="telegram-button" target="_blank"
+       class="fixed bottom-4 right-4 bg-blue-500 text-white p-3 rounded-full shadow-lg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-10 h-10">
+    </a>
+
+    <!-- 🔹 Footer -->
+    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
+        <div class="container mx-auto">
+            <p class="mt-2">© 2025 All rights reserved.</p>
+            <a href="policies.html" class="text-blue-600 hover:underline">Privacy Policy</a> | 
+            <a href="policies.html#return-policy-content" class="text-blue-600 hover:underline">Return Policy</a> | 
+            <a href="policies.html#about-us-content" class="text-blue-600 hover:underline">About Us</a>
+        </div>
+    </footer>
+
     <!-- 🔹 تحميل PayPal SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id=AZsqOV7PNElXMoKK4b-Z0CVgd9ymky6qwNMynhX3a2PyJj7i97tH2g8HXlmGsuCwo3QcChAQxYrtcuds&components=buttons"></script>
 
@@ -126,7 +138,7 @@
                         return actions.order.capture().then(function (details) {
                             alert("✅ Payment successful via PayPal!");
 
-                            // 🔹 تجهيز بيانات العميل وإرسالها إلى تيليجرام
+                            // 🔹 إرسال البيانات إلى تيليجرام
                             let message = `📢 *New Payment Received!* 🚀\n\n` +
                                           `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
                                           `📧 *Email:* ${details.payer.email_address}\n` +
