--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </div>
     
     <!-- 🔹 Payment Methods Image -->
-    
+      <!-- 🔹 Payment Methods Image -->
+    <div class="payment-bar">
+        <img src="IMG_3303.jpeg" alt="Payment Methods">
+    </div>
+
 
     <!-- 🔹 Social Media Icons -->
     <div class="text-center mb-6">
