--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <!-- 🔹 Header -->
     <div class="header-container">
-        <img src="IMG_3315.png" alt="Header Image" class="header-image">
+        <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
     </div>
     
     <!-- 🔹 Payment Methods Image -->
       <!-- 🔹 Payment Methods Image -->
     <div class="payment-bar">
-        <img src="IMG_3303.jpeg" alt="Payment Methods">
+        <img src="IMG_3315.png" alt="Payment Methods">
     </div>
 
 
