--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- 🔹 Payment Methods Image -->
       <!-- 🔹 Payment Methods Image -->
     <div class="payment-bar">
-        <img src="IMG_3318.png" alt="Payment Methods">
+        <img src="IMG_3319.png
     </div>
 
 
