--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     
     <!-- 🔹 Payment Methods Image -->
       <!-- 🔹 Payment Methods Image -->
+        <!-- 🔹 Payment Methods Image -->
     <div class="payment-bar">
-        <img src="IMG_3319.png
+        <img src="IMG_PAYMENT_METHODS.jpeg" alt="Payment Methods">
     </div>
 
 
