--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- 🔹 Payment Methods Image -->
         <!-- 🔹 Payment Methods Image -->
     <div class="payment-bar">
-        <img src="IMG_PAYMENT_METHODS.jpeg" alt="Payment Methods">
+        <img src="IMG_3319.png" alt="Payment Methods">
     </div>
 
 
